--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,10 @@
 <h1>Blogs</h1>
 
-<%= blogs %>
+<% blogs.forEach(function(blog){ -%>
+	<div>
+		<h2><%= blog.title %></h2>
+		<img src="<%= blog.image %>">
+		<span><%= blog.created %></span>
+		<p><%= blog.body %></p>
+	</div>
+<% }) -%>
