--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,13 @@
 <% include ./partials/header %>
 
-<div class="ui main text container">
+<div class="ui main text container segment">
 	<div class="ui huge header">Blogs</div>
 	<% blogs.forEach(function(blog){ -%>
-		<div class="ui main text container segment">
+		<div class="ui main text container">
 			<h2><%= blog.title %></h2>
 			<img src="<%= blog.image %>">
-			<span><%= blog.created %></span>
-			<p><%= blog.body %></p>
+			<p><%= blog.created %></p>
+			<p><%= blog.body.substring(0,150) %>...</p> <a href="/blogs/<%= blog._id %>">Read More</a>
 		</div>
 	<% }) -%>
 </div>
