--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,7 +1,12 @@
-i.icon{
-	font-size: 2em;
+i.icon {
+    font-size: 2em;
 }
 
 .container.main {
-	margin-top: 7em;
+    margin-top: 7em;
+}
+
+#delete {
+    /*create inline delete button*/
+    display: inline;
 }
