--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,30 @@
 <% include ./partials/header %>
 
-<div class="ui main text container segment">
+<div class="ui main text container">
 	<div class="ui huge header">Blogs</div>
-	<% blogs.forEach(function(blog){ -%>
-		<div class="ui main text container">
-			<h2><%= blog.title %></h2>
-			<img src="<%= blog.image %>">
-			<p><%= blog.created %></p>
-			<p><%= blog.body.substring(0,150) %>...</p> <a href="/blogs/<%= blog._id %>">Read More</a>
-		</div>
-	<% }) -%>
+	<div class="ui top attached segment">
+	<div class="ui relaxed divided items">
+		<% blogs.forEach(function(blog){ -%>
+			<div class="item">
+			<div class="ui medium image">
+				<img src="<%= blog.image %>">
+			</div>
+			<div class="content">
+				<a href="/blogs/<%= blog._id %>"><%= blog.title %></a>
+				<div class="meta">
+					<span><%= blog.created.toDateString() %></span>
+				</div>
+				<div class="description">
+					<p><%- blog.body.substring(0,150) %>...</p>
+				</div>
+				<div class="extra">
+					<a class="ui floated blue button" href="/blogs/<%= blog._id %>">Read More <i class="right chevron icon"></i></a>
+				</div>
+			</div>				
+			</div>
+		<% }) -%>
+	</div>
+	</div>
 </div>
 
 <% include ./partials/footer %>
